--- a/resources/regular.properties
+++ b/resources/regular.properties
@@ -1,4 +1,4 @@
-SENTANCE_PATTERN = [A-Z\u0410-\u042F].*[\\.!?]
-WORD_PATTERN = [A-z\u0410-\u044F]+|[,-\\.!?:;]
+SENTANCE_PATTERN = [A-Z]([a-z]*[\\s,:]+)*[\\.!?]
+WORD_PATTERN = [A-z]+|[,-\\.!?:;]
 BLOCK_CODE_PATTERN = (([a-zA-Z])+\\s+) {2,5}([(](\\2)*[)])?\\{.*\\}
-PARAGRAPH_PATTERN = .+[\\.!?:;]+\\n"
+PARAGRAPH_PATTERN = [\\s\\t]+[A-Z].[\\.!?:;]+\\n"
